--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,6 +4,8 @@
   %body
     = link_to("agreelist.com", "http://agreelist.com")
     = " - " 
+    = link_to("API & GitHub","https://github.com/agreelist/agreelist-test")
+    = " - " 
     = link_to("feedback@agreelist.com","mailto://agreelist.com")
     %br/
     %br/
