--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
   %head
     %title Make a list of who agree with a statement you consider important
   %body
-    = link_to("agreelist.com", "http://agreelist.com")
+    = link_to("AgreeList", "http://agreelist.com")
     = " - " 
     = link_to("API & GitHub","https://github.com/agreelist/agreelist-test")
     = " - " 
