--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,8 +4,10 @@
   %body
     = link_to("AgreeList", "http://agreelist.com")
     = " - " 
+    = link_to("info G+", "https://plus.google.com/u/0/100681401868853887163/posts/c2RnBDGh7Vs")
+    = " - "
     = link_to("API & GitHub","https://github.com/agreelist/agreelist-test")
-    = " - " 
+    = " - "
     = link_to("feedback@agreelist.com","mailto://agreelist.com")
     %br/
     %br/
