--- a/views/statement.haml
+++ b/views/statement.haml
@@ -1,11 +1,10 @@
-
-%h1=readable(statement)
-- if statement == "assault_weapons_should_be_banned"
-  - if filter
+%h1=readable(@statement.statement)
+- if @statement.statement == "assault_weapons_should_be_banned"
+  - if @filter
     = link_to("Whole list", "/a/assault_weapons_should_be_banned")
-    - if filter == "US_Senator"
+    - if @filter == "US_Senator"
       = "> US Senators"
-    - elsif filter == "Nobel_Prize"
+    - elsif @filter == "Nobel_Prize"
       = "> Nobel Prize winners"
   - else
     Whole list (including 
@@ -32,9 +31,9 @@
         %td= print
   %tr
     %td
-      = link_to("Add someone else who agrees","/a/#{statement}/new")
+      = link_to("Add someone else who agrees","/a/#{@statement.statement}/new")
     %td
-      = link_to("Add someone else who disagrees","/a/#{statement}/new?disagree=true")
+      = link_to("Add someone else who disagrees","/a/#{@statement.statement}/new?disagree=true")
 
 %br/
 /%strong Related statements:
