Obama to homepage

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,7 +1,4 @@
 Dissect a statement and gather who agree:
-%br/
-e.g. 
-= link_to("assault weapons should be banned", "/a/assault_weapons_should_be_banned")
 
 %br/
 %form{ :action => "", :method => "post"}
@@ -9,3 +6,8 @@ e.g.
     %label{:for => "name"}
     %input{:type => "text", :name => "name", :class => "text"}
     %input{:type => "submit", :value => "Send", :class => "button"}
+
+Recent on AgreeList:
+%br/
+Barack Obama agrees that 
+= link_to("assault weapons should be banned", "/a/assault_weapons_should_be_banned")
