--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,6 +1,6 @@
 %html
   %head
-    %title Make a list of who agree with a statement you consider important
+    %title The list of who agree
   %body
     = link_to("AgreeList", "http://agreelist.com")
     = " - " 
