--- a/views/index.haml
+++ b/views/index.haml
@@ -9,5 +9,8 @@ Dissect a statement and gather who agree:
 
 Recent on AgreeList:
 %br/
-Barack Obama agrees that 
-= link_to("assault weapons should be banned", "/a/assault_weapons_should_be_banned")
+= activity_line("Barack Obama", "http://en.wikipedia.org/wiki/barack_obama", "assault weapons should be banned")
+%br/
+= activity_line("Tim Berners-Lee", "http://en.wikipedia.org/wiki/tim_berners-lee", "big data brings new oportunities")
+%br/
+= activity_line("Ford", "http://en.wikipedia.org/wiki/ford", "UK exit from the UE would not be good for the UK economy")
