--- a/views/index.haml
+++ b/views/index.haml
@@ -7,10 +7,14 @@ Dissect a statement and gather who agree:
     %input{:type => "text", :name => "name", :class => "text"}
     %input{:type => "submit", :value => "Send", :class => "button"}
 
-Recent on AgreeList:
+Five examples:
 %br/
 = activity_line("Barack Obama", "http://en.wikipedia.org/wiki/barack_obama", "assault weapons should be banned")
 %br/
 = activity_line("Tim Berners-Lee", "http://en.wikipedia.org/wiki/tim_berners-lee", "big data brings new oportunities")
 %br/
 = activity_line("Ford", "http://en.wikipedia.org/wiki/ford", "UK exit from the UE would not be good for the UK economy")
+%br/
+= activity_line("Jimmy Wales", "http://en.wikipedia.org/wiki/Jimmy_Wales", "homeopathy should be illegal")
+%br/
+= activity_line("Richard Branson", "http://en.wikipedia.org/wiki/Richard_Branson", "politicians_should_collaborate_more")
