--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,9 +4,7 @@
   %body
     = link_to("AgreeList", "http://agreelist.com")
     = " - " 
-    = link_to("info G+", "https://plus.google.com/u/0/100681401868853887163/posts/c2RnBDGh7Vs")
-    = " - "
-    = link_to("API & GitHub","https://github.com/arpahector/agreelist")
+    = link_to("Developers","https://github.com/arpahector/agreelist")
     = " - "
     = link_to("feedback@agreelist.com","mailto://agreelist.com")
     %br/
