statement fork and delete (rename) and index minor changes

--- a/views/index.haml
+++ b/views/index.haml
@@ -9,12 +9,17 @@ Dissect a statement and gather who agree:
 
 Five examples:
 %br/
-= activity_line("Barack Obama", "http://en.wikipedia.org/wiki/barack_obama", "assault weapons should be banned")
+Barack Obama agrees that
+= link_to_statement "assault weapons should be banned"
 %br/
-= activity_line("Tim Berners-Lee", "http://en.wikipedia.org/wiki/tim_berners-lee", "big data brings new oportunities")
+Tim Berners-Lee agrees that
+= link_to_statement "big data brings new oportunities"
 %br/
-= activity_line("Ford", "http://en.wikipedia.org/wiki/ford", "UK exit from the UE would not be good for the UK economy")
+Ford disagrees that
+= link_to_statement "UK exit from the UE would be good for the UK"
 %br/
-= activity_line("Jimmy Wales", "http://en.wikipedia.org/wiki/Jimmy_Wales", "homeopathy should be illegal")
+Jimmy Wales" agrees that
+= link_to_statement "homeopathy should be illegal"
 %br/
-= activity_line("Richard Branson", "http://en.wikipedia.org/wiki/Richard_Branson", "politicians_should_collaborate_more")
+Richard Branson agrees that
+= link_to_statement "politicians should collaborate more"
