--- a/views/index.haml
+++ b/views/index.haml
@@ -18,7 +18,7 @@ Tim Berners-Lee agrees that
 Ford disagrees that
 = link_to_statement "UK exit from the UE would be good for the UK"
 %br/
-Jimmy Wales" agrees that
+Jimmy Wales agrees that
 = link_to_statement "homeopathy should be illegal"
 %br/
 Richard Branson agrees that
