--- a/views/index.haml
+++ b/views/index.haml
@@ -13,7 +13,7 @@ Barack Obama agrees that
 = link_to_statement "assault weapons should be banned"
 %br/
 Ford disagrees that
-= link_to_statement "UK exit from the UE would be good for the UK"
+= link_to_statement "UK exit from the EU would be good for the UK"
 %br/
 Tim Berners-Lee agrees that
 = link_to_statement "big data brings new oportunities"
