--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,9 @@
 %html
   %head
     %title The list of who agree
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   %body
+    <script src="js/bootstrap.min.js"></script>
     = link_to("AgreeList", "http://agreelist.com")
     = " - " 
     = link_to("Developers","https://github.com/arpahector/agreelist")
