join instead of contact

--- a/views/index.haml
+++ b/views/index.haml
@@ -7,7 +7,7 @@
   %div.row{ :align => "center" }
     %div.span3
     %div.span3
-      %a{ :class => "btn btn-large btn-success", :href => "/contact" } Join
+      %a{ :class => "btn btn-large btn-success", :href => "/join" } Join
   %br/
       
   %div.row
