minor homepage change

--- a/views/index.haml
+++ b/views/index.haml
@@ -32,7 +32,7 @@
     %div.span3
       Richard Branson agrees that
       %br/
-      = link_to_statement "politicians should collaborate more"
+      = link_to_statement "schools should encourage entrepreneurship"
     %div.span3
       The Royal Society agrees that
       %br/
