type fixed and rm deprecated proxies

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,7 +8,7 @@
     = " - " 
     = link_to("Developers","https://github.com/arpahector/agreelist")
     = " - "
-    = link_to("feedback@agreelist.com","mailto://agreelist.com")
+    = link_to("feedback@agreelist.com","mailto://feedback@agreelist.com")
     %br/
     %br/
     = yield
