--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,7 +6,7 @@
     <script src="js/bootstrap.min.js"></script>
     = link_to("AgreeList", "http://agreelist.com")
     = " - " 
-    = link_to("Developers","https://github.com/arpahector/agreelist")
+    = link_to("API & GitHub","https://github.com/arpahector/agreelist")
     = " - "
     = link_to("feedback@agreelist.com","mailto://feedback@agreelist.com")
     %br/
