comment links to add sb else who agrees

--- a/views/statement.haml
+++ b/views/statement.haml
@@ -29,11 +29,11 @@
         - else
           - print = ""
         %td= print
-  %tr
-    %td
-      = link_to("Add someone else who agrees","/a/#{@statement.text}/new")
-    %td
-      = link_to("Add someone else who disagrees","/a/#{@statement.text}/new?disagree=true")
+/  %tr
+/    %td
+/      = link_to("Add someone else who agrees","/a/#{@statement.text}/new")
+/    %td
+/      = link_to("Add someone else who disagrees","/a/#{@statement.text}/new?disagree=true")
 
 %br/
 /%strong Related statements:
